# agentdataset

./: .gitignore  LICENSE  PROJECT.md  README.md  SPEC.md  app.py  benchmark.py  extract.py  program.md  pyproject.toml
.github/workflows/: tests.yml
agentdataset/core/: discovery.py  extractor.py  orchestrator.py  synthesizer.py  validator.py
agentdataset/models/: schemas.py
analysis/: adult_f1_gap.py
results/: README.md  ablation_extraction_method.csv  ablation_noise_pivot.csv  adult_f1_gap.csv  caveman_token_savings.csv  cost_latency.csv  empirical_benchmark.csv
tests/: test_app.py  test_benchmark.py  test_discovery.py  test_e2e_live.py  test_extractor.py  test_optimizer_curator.py  test_orchestrator.py  test_schemas.py  test_synthesizer.py  test_validator.py
