[project]
name = "agentdataset"
version = "0.1.0"
description = "AgentDataset - Autonomous Synthetic Data Factory"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pydantic>=2.10.0",
    "numpy>=2.2.0",
    "scipy>=1.15.0",
    "pandas>=2.2.0",
    "PyMuPDF>=1.25.0",
    "requests>=2.32.0",
    "trafilatura>=2.0.0",
    "litellm>=1.83.14",
    "streamlit>=1.57.0",
    "ddgs>=9.14.4",
    "scikit-learn>=1.9.0",
    "ucimlrepo>=0.0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentdataset"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--basetemp=.pytest_tmp --cov=agentdataset --cov=app --cov-report=term-missing"
markers = [
    "live_e2e: live API-backed end-to-end test that requires .env credentials",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "pytest-cov>=7.0.0",
]
